Use FITAPP_LOGIN_REDIRECT and FITAPP_LOGOUT_REDIRECT

--- a/fitapp/templates/fitapp/error.html
+++ b/fitapp/templates/fitapp/error.html
@@ -1,5 +1,3 @@
-{% load url from future %}
-
 <html>
     <head>
         <title>Fitbit Authentication Error</title>
@@ -7,8 +5,7 @@
     <body>
         <h1>Fitbit Authentication Error</h1>
 
-        <p>We encountered an error while attempting to authenticate you through Fitbit.</p>
-
-        <p><a href="{% url 'fitbit' %}">Retry Fitbit Authentication</a></p>
+        <p>We encountered an error while attempting to authenticate you
+        through Fitbit.</p>
     </body>
 </html>
